# Mielikki

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
src/: App.svelte  app.html  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: file_caching.rs
src-tauri/icons/: icon.icns
src-tauri/sql/: create.sql  drop_cache_database.sql  find_files.sql  insert_files.sql
src-tauri/src/: filecache.rs  lib.rs  main.rs
src-tauri/tests/: test-cahing.rs
src/lib/: CurrentDir.svelte  DirFunctions.ts  NavBar.svelte  SearchBar.svelte  SubDir.svelte  dirFunctions.ts
src/lib/components/: FileDisplay.svelte  NavBar.svelte  NavigationButton.svelte  RightClickMenu.svelte  SearchBar.svelte  Types.ts
src/lib/stores/: DirectoryStore.ts  SearchStore.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/search/: +page.svelte
static/: global.css
