[package]
name = "mielikki"
version = "0.0.1"
description = "A file manager that aims to be faster than File Explorer"
authors = ["Vili Ikäheimo <vili.vikaheim@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99.17"
tokio = { version = "1.29.1", features = ["full"] }
tokio-rusqlite = "0.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
benchmarking = []
